<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    tools:context="com.othmane.lamrani.fynoapp.ui.LoginActivity"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#fff"
    android:scrollbars="none"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <ImageView android:src="@drawable/ic_fyno_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_username" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_password" />
            </android.support.design.widget.TextInputLayout>

            <TextView android:id="@+id/link_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login_forget_password"
                android:gravity="right"
                android:textSize="16dip"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/check_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_marginBottom="16dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:background="@drawable/rounded_layout_btn_login"/>


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register1"
                    android:gravity="center|bottom"
                    android:textSize="16dip"
                    android:textColor="@color/backGround"/>

                <TextView android:id="@+id/link_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register2"
                    android:gravity="center|bottom"
                    android:textSize="16dip"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/copyRight"
                android:gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:padding="7dp" />

        </LinearLayout>


    </LinearLayout>



</ScrollView>
