<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow"
    android:layout_gravity="center">

    <!-- Tab for vehistopDatatops -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyleLinearLayoutDetails"
        android:weightSum="5">

        <!-- Title -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:text="@string/list_stops"
            android:drawableStart="@drawable/ic_is_stopped"
            android:drawablePadding="8dp"
            android:singleLine="true"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btn_reduceStops"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/transparent"
            android:src="@drawable/ic_minus"
            android:layout_gravity="center|right"
            android:tag="false"
            android:visibility="gone"/>

    </LinearLayout>





    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#d1cdcd"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"/>

    <LinearLayout
        android:id="@+id/btn_choose_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent"
            android:src="@drawable/ic_calendar_range_black_24dp"
            android:tag="false"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_stop_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tv_load_vehicle_stops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loading_data"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select all"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stopsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>